fix overflow on side pane

--- a/styles/Overlay.module.css
+++ b/styles/Overlay.module.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   justify-content: stretch;
   align-items: center;
+  overflow: hidden;
 
   /* border: 1px solid black; */
 }
